home page fixessss
Fixed - home page not being very usable on smaller but not quite mobile screen sizesssss
Fixed - home page nav bar not being very usable at- see the last fix^^
Fixed - home page avatar being slightly cut off at the top at normal screen sizes

Tweaked - position of the little search bar area to be slightly lower like I'm pretty sure it was originallyyyyy :mewothink:

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.2.6
+@version        2.2.7
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -5195,30 +5195,49 @@ if themep == classic {
 @-moz-document url("https://e621.net/"), url("https://e926.net/"), url("https://e926.net"), url("https://e621.net") {
 	/* Home page */
 	html {
-		overflow: hidden;
+		/*overflow: hidden;*/
 	}
-	body {
+	body.c-static {
 		max-height: 100vh;
 		max-width: 100vw;
-		overflow: hidden;
 		background-image: var(--main-page-background)!important;
 		background-position:center;
 		background-size: cover !important;
 		background-color: var(--bg)!important;
+		position:relative;
 	}
 	body.c-static.a-home nav.navigation {
 		background: var(--bg);
 		border: 4px solid var(--bg-400);
 		border-top: 0px solid transparent;
 		border-radius: 0 0 8px 8px;
+		min-height: 4.5rem !important;
 		width: fit-content;
 		margin-inline:auto;
 		padding-left: 1rem;
 		padding-right: 1rem;
+		& .simple-avatar-image {
+			margin-top: 1.75rem;
+		}
 	}
 	div#page {
 		background: none!important;
-		margin: 25rem auto 0 !important;
+		max-width: none !important;
+		display:grid;
+		place-items: center;
+		width: 100vw;
+		margin-top: auto !important;
+		margin-inline: auto !important;
+		margin-bottom: auto !important;
+		padding-top: 4rem !important;
+		& div#c-static {
+			max-width: 480px;
+			margin-top: clamp(10px, 40vh, 40vh);
+			margin-bottom: auto;
+		}
+	}
+	div#c-static::before, div#c-static::after {
+		content: none !important;
 	}
 	body.c-static.a-home .home-section,
  	body.c-static.a-home section[class^="home-footer"] {
@@ -5290,7 +5309,6 @@ if themep == classic {
 	}
 	body, div#page {
 		max-height:100vh;
-		overflow:hidden;
 	}
 	#a-home {
 		width: fit-content;
